components/backend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/created-by: KAM
    app.kubernetes.io/instance: backend
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: backend
    app.kubernetes.io/part-of: ssapp2
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: backend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: backend
    spec:
      containers:
      - image: nginxinc/nginx-unprivileged:latest
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /
            port: 8090
          initialDelaySeconds: 10
          periodSeconds: 10
        name: container-image
        ports:
        - containerPort: 8090
        readinessProbe:
          initialDelaySeconds: 10
          periodSeconds: 10
          tcpSocket:
            port: 8090
        resources: {}
      imagePullSecrets:
      - name: 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
status: {}
