components/backend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/created-by: KAM
    app.kubernetes.io/instance: backend
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: backend
    app.kubernetes.io/part-of: ssapp2
  name: backend
spec:
  ports:
  - port: 8090
    targetPort: 8090
  selector:
    app.kubernetes.io/instance: backend
status:
  loadBalancer: {}
