components/backend/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/created-by: KAM
    app.kubernetes.io/instance: backend
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: backend
    app.kubernetes.io/part-of: ssapp2
  name: backend
spec:
  host: myroute
  port:
    targetPort: 8090
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: backend
    weight: 100
status: {}
